GETools changelog

Backlog:
- not completed | [RIGGING] added Aim Constraint logic
- [RIGGING] added constraint offset object
- [RIGGING] added Rebake IK from selected objects

v0.0.13
- [UI] Decreased buttons size and renamed some labels.
- [TOOLS] Added locators size controller.
- [TOOLS] Added World baking tool.
- [TOOLS] Added offset animation tool.
- [TOOLS] Updated DeleteKeys functions.
- [TOOLS] Updated "Bake By Last" button. New name "By Last" + 2 alternative buttons for Position and Rotation.
- [TOOLS] Removed Tools/Animation/Key Range button. Replaced by "Delete Animation" button.
- [OVERLAPPY] Added pos/rot layer prefixes.
- Improved Baking and Timeline modules.
- Refactored Locators module.

v0.0.12
- [UI] Decreased window size and renamed some labels.
- [UI] Moved some rarely used buttons to right-click menus (cursor changes while hovering over buttons with pop-up lists).
- [UTILS] Added Printing selected attributes from channel box to Utils.
- [TOOLS] Added buttons for setting the bake sample rate value.
- [TOOLS] Added baking for selected attributes in the channel box.
- [TOOLS] Separated Locator Bake into "PIN," "Pin POS," and "Pin ROT."
- [TOOLS] Changed Locators Relative to Relative; added a right-click menu for options.
- [RIGGING] Added "Disconnect Targets from Constraint."
- [RIGGING] Improved logic for "Delete Constraints."
- [CENTER OF MASS] Added "Disconnect from Center of Mass" button.
- Improved various modules and overall quality.

v0.0.11
- [UI] moved Select Transform Hierarchy button to Utils menu and remove SELECT category in TOOLS module
- [UI] changed window width, margins and spacing between ui elements
- [UI] added Color Palette window for colors analysis
- [UI] added toggling for script window execution. Press the same button to open/close script (reset all parameters changes)
- [TOOLS] added Locators baking to Aim space
- [TOOLS] added Infinity buttons for animation curves
- [TOOLS] added delete static curves button